# agent_com

./: .env.example  .gitignore  .mcp.example.json  .mcp.json  .uvrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.communication  Dockerfile.mcp  README.md  alembic.ini  config.comm.json  config.json  config.local.json.example  config.mcp.example.json  config.production.example.json  config.production.json  config.server.example.json  config.standalone.example.json  docker-compose.ssl.yml  docker-compose.yml  mcp-broker.service  pyproject.toml  setup-config.sh  start-all.sh  stop-all.sh
.claude/: settings.json
.claude/agents/moai/: manager-git.md
.claude/skills/moai-workflow-templates/: examples.md
.moai/cache/: personalization.json
.moai/config/sections/: project.yaml  quality.yaml  system.yaml  user.yaml
.moai/docs/: agent-system-prompt-strategy.md  database-schema-owner-security.md
.moai/memory/: last-session-state.json
.moai/project/: product.md  structure.md  tech.md
.moai/specs/SPEC-AGENT-COMM-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-DASHBOARD-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-MCP-BROKER-001/: IMPLEMENTATION_PLAN.md  acceptance.md  plan.md  spec.md
.moai/specs/SPEC-MCP-BROKER-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-PROJECT-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-SECURITY-001/: IMPLEMENTATION_SUMMARY.md  acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-I18N-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-MESSAGES-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-PROJECTS-001/: acceptance.md  plan.md  spec.md
alembic/: env.py
alembic/versions/: 002_add_agent_api_key_user_fk.py  003_add_project_api_keys_table.py  004_add_polymorphic_foreign_keys.py
docs/: AGENT_PROMPTS.md  AGENT_TASK_API.md  AGENT_TASK_ARCHITECTURE.md  AGENT_TASK_MIGRATION.md  AGENT_TASK_QUICKSTART.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  INSTALLATION.md  MCP_CONFIGURATION.md  OCI_DEPLOYMENT.md  SECURITY.md  SSL_SETUP.md  STANDALONE_MODE.md  SYSTEM_ARCHITECTURE.md  UBUNTU_2404_SETUP.md  UV_MIGRATION.md  api.md  architecture.md  deployment.md
nginx/: nginx.conf
scripts/: agent-comm-port8000.service  agent-comm.service  deploy-production.sh  deploy-remote.sh  deploy.sh  dev.sh  generate-certificates.sh  init-db.sh  init_db.py  install-ubuntu.sh  install.sh  migrate_agent_task_tables.py  migrate_default_project.py  migrate_project_api_key_table.py  migrate_tokens.py  renew-ssl.sh  setup-ssl.sh  verify-deployment.sh
scripts/migrations/: 001_create_mediator_tables.sql  002_add_agent_api_key_user_fk.sql
src/agent_comm_core/: __init__.py
src/agent_comm_core/api/: __init__.py
src/agent_comm_core/config/: __init__.py  config.default.json  defaults.py  loader.py  models.py
src/agent_comm_core/db/: __init__.py  base.py  database.py
src/agent_comm_core/models/: __init__.py  agent_api_key.py  agent_comm.py  audit_log.py  auth.py  chat.py  common.py  communication.py  decision.py  mediator.py  (+4 more)
src/communication_server/: __init__.py  dependencies.py  main.py
src/mcp_broker/: __init__.py  __main__.py  main.py
tests/: __init__.py  conftest.py  test_mediator_system.py
tests/characterization/: test_discussion_preserve.py  test_milestone3_preserve.py
tests/e2e/: __init__.py  test_agent_persistence_e2e.py  test_task_persistence_e2e.py
tests/integration/: __init__.py  test_agent_api_integration.py  test_agent_registry.py  test_e2e_scenario.py  test_mcp_communication_integration.py  test_migration.py  test_migration_agent_api_key_fk.py  test_multi_project.py  test_sequential_discussion.py  test_task_api_integration.py  test_topic_analysis.py  test_websocket_events.py
tests/unit/: __init__.py  test_admin_permissions.py  test_agent_api_key_fk.py  test_agent_api_key_fk_behavior.py  test_agent_comm_service.py  test_agent_task_models.py  test_auth_characterization.py  test_auth_module.py  test_base_mixins.py  test_common_enums.py  test_config.py  test_identification.py  test_mcp_tools.py  test_message_models.py  test_milestone3_enhancements.py  test_multi_round_discussion.py  test_negotiator.py  test_project_api_characterization.py  test_project_models.py  test_project_registry.py  test_protocol_models.py  test_protocol_registry.py  test_router.py  test_security.py  test_session_manager.py  test_session_models.py  test_sqlalchemy_base.py  test_storage.py  test_storage_isolation.py
(+149 files in other folders)
